2001-04-24  Christian Stimming  <stimming@tuhh.de>

	* src/guile/gnc.gwp: g-wrap all the euro-related functions.

2001-04-24  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-transfer.c: set price for euro currencies
	automatically

	* src/EuroUtils.c (gnc_euro_currency_get_rate): new func

2001-04-23  Dave Peticolas  <dave@krondo.com>

	* src/gnome/gnc-html-guppi.c: check for new guppi args before
	passing them

2001-04-23  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/transaction-report.scm: Make more sanity
	checks. Fix bugs.

2001-04-23  Dave Peticolas  <dave@krondo.com>

	* src/engine/Query.c (xaccQueryGetSplitsUniqueTrans): fix bug

	* src/engine/Account.c (xaccAccountSetPriceSrc): fix bug

2001-04-23  Kevin Finn  <kevinfinn@mediaone.net>

	* src/engine/Account.c src/engine/Account.h: added
	xaccAccountGetBalanceAsOfDate and
	xaccAccountGetShareBalanceAsOfDate, to determine the balance of an
	account on a given date.

	* src/gnome/window-reconcile.c: added appropriate callbacks so
	that changes to the startRecnWindow date entry will update the
	ending balance amount entry.  Once the user manually updates the
	ending balance amount, the automatic updates will no longer occur
	if the date entry is changed again.  Changed
	gnc_get_reconcile_info to use the *AsOfDate funcs if possible.

2001-04-22  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/transaction-report.scm: More work on subtotal
	options.

	* src/scm/report/net-worth-timeseries.scm: Add links to new
	reports on bars.

	* src/scm/options.scm, html-utilities.scm: Fix bugs with wrong
	report names.

2001-04-22  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-find-transactions.c: remove tags notebook page.

2001-04-22  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/income-expense-graph.scm: Add links to new
	reports on bars.

2001-04-22  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/transaction-report.scm: use new api for
	changing sensitivity
